# stataconf

./: MANIFEST.in  build-and-upload  pyproject.toml  setup.py
